--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,6 +8,19 @@ hr {
     padding: 0;
 }
 
+li {
+    padding: 0;
+    margin: 0;
+}
+
+#testimonials {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../images/home.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 .check-for {
     border: 3px solid rgb(219, 31, 31);
 }
@@ -19,7 +32,7 @@ hr {
 }
 
 .back-carousel {
-    height: 100vh;
+    height: 80vh;
     /* Center and scale the image nicely */
     background-size: cover;
     position: relative;
@@ -27,7 +40,7 @@ hr {
 
 .header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(".../images/005\ pic.JPEG");
-    height: 100vh;
+    height: 85vh;
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
@@ -37,7 +50,7 @@ hr {
 
 .about-header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../images/carousel/019\ pic.JPEG");
-    height: 100vh;
+    height: 85vh;
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
@@ -95,7 +108,7 @@ hr {
 }
 
 .carousel-img {
-    border-radius: 30%;
+    /* border-radius: 30%; */
     height: 50vh;
     display: block;
     margin-left: auto;
@@ -142,4 +155,180 @@ hr {
 
 .impact {
     height: 40vh;
+}
+
+.contacts {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../images/home.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.w-text {
+    color: white;
+}
+
+.c-text {
+    font-size: large;
+}
+
+.u-text {
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.g-link {
+    color: #00551c;
+}
+
+.g-link:hover {
+    color: #00812b;
+}
+
+.trans {
+    transform: rotate(-15deg)
+}
+
+@media (max-width: 990px) {
+    .center-text {
+        text-align: center;
+    }
+}
+
+
+/* EVENTS */
+
+.upcoming {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 80vh;
+    padding: 0 35px;
+    background: rgb(228, 220, 220);
+    box-sizing: border-box;
+}
+
+.wrapper_ {
+    max-width: 1100px;
+    width: 100%;
+    position: relative;
+}
+
+.wrapper_ i {
+    height: 50px;
+    width: 50px;
+    background: rgb(118, 233, 118);
+    text-align: center;
+    line-height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    font-size: 1.25 rem;
+    transform: translateY(-50%);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.wrapper_ i:first-child {
+    left: -22px;
+}
+
+.wrapper_ i:last-child {
+    right: -22px;
+}
+
+.wrapper_ .carousel_ {
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: calc((100% / 3) - 12px);
+    gap: 16px;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    scrollbar-width: 0;
+}
+
+.carousel_::-webkit-scrollbar {
+    display: none;
+}
+
+.carousel_ :where(.card_,
+.img) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.carousel_.dragging {
+    scroll-snap-type: none;
+    scroll-behavior: auto;
+}
+
+.carousel_.no-transition {
+    scroll-behavior: auto;
+}
+
+.carousel_.dragging .card_ {
+    cursor: grab;
+    user-select: none;
+}
+
+.carousel_ .card_ {
+    scroll-snap-align: start;
+    height: 340px;
+    list-style: none;
+    background: #fff;
+    border-radius: 8px;
+    display: flex;
+    cursor: pointer;
+    width: 98%;
+    padding-bottom: 15px;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.card_ .img {
+    background: green;
+    width: 145px;
+    height: 145px;
+    border-radius: 50%;
+}
+
+.card_ .img img {
+    width: 140px;
+    height: 140px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 4px solid #fff;
+}
+
+.card_ h2 {
+    font-weight: 500;
+    font-size: 1.56rem;
+    margin: 30px 0 5px;
+}
+
+.card_ span {
+    color: #6a6d78;
+    font-size: 1.31rem;
+}
+
+@media screen and (max-width: 900px) {
+    .wrapper_ .carousel_ {
+        grid-auto-columns: calc((100% / 2) - 9px);
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .wrapper_ .carousel_ {
+        grid-auto-columns: 100%;
+    }
+}
+
+.month {
+    color: blue;
 }
